batteryview.css
.battery-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 10px;
    padding: 20px;
    position: relative;
}

.battery-item {
    background-color: #fff;
    border: 2px solid #007bff;
    border-radius: 8px;
    padding: 20px;
    text-align: center;
    font-weight: bold;
    transition: background-color 0.3s, border-color 0.3s;
    position: relative;
}

.battery-number {
    position: absolute;
    top: -20px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #fff;
    border: 1px solid #007bff;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}

.battery-item:hover {
    background-color: #e6f0ff;
    border-color: #0056b3;
}

.battery-temp,
.battery-voltage {
    margin-bottom: 5px;
    font-size: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
}

.battery-temp i,
.battery-voltage i {
    margin-right: 5px;
}

.details-container {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 800px;
    background-color: #fff;
    border: 2px solid #007bff;
    border-radius: 8px;
    padding: 20px;
    text-align: left;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    overflow-y: auto;
    max-height: 80vh;
}

.battery-info {
    font-weight: bold;
    font-size: 1.2em;
    margin-bottom: 10px;
}

.details-separator {
    border: none;
    border-top: 2px solid #007bff;
    width: 100%;
    margin: 0 auto;
}

.close-button {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    font-size: 1.5em;
    cursor: pointer;
    color: #007bff;
}

.close-button:hover {
    color: #0056b3;
}

.chart-container {
    margin-top: 10px;
    min-height: 175px;
    height: 175px;
}

.additional-item {
    background-color: #fff;
    border: 2px solid #007bff;
    border-radius: 8px;
    padding: 10px;
    text-align: center;
    font-weight: bold;
    margin: 20px auto;
    transition: background-color 0.3s, border-color 0.3s;
    width: 300px;  /* Genişliği arttırıldı */
    height: 100px;
}

.info-item {
    margin-bottom: 5px;
    font-size: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
}

.info-item i {
    margin-right: 5px;
}


/* Dark mode */
.dark-mode .battery-item {
    background-color: #333;
    border-color: #555;
    color: #dcdcdc;
}

.dark-mode .battery-item:hover {
    background-color: #444;
    border-color: #666;
}

.dark-mode .battery-number {
    background-color: #444;
    border-color: #666;
    color: #dcdcdc;
}

.dark-mode .details-container {
    background-color: #333;
    border-color: #555;
    color: #dcdcdc;
}

.dark-mode .details-separator {
    border-top-color: #555;
}

.dark-mode .close-button {
    color: #dcdcdc;
}

.dark-mode .close-button:hover {
    color: #fff;
}

.dark-mode .chart-container {
    color: #dcdcdc;
}

.dark-mode .info-item {
    color: #dcdcdc;
}

